welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: '=' expected but ';' found.
  for (i<-1 to nums.length) 
^